[project]
name = "smb-utils"
version = "0.1.1"
description = "SMB Utils - PyTorch"
authors = [
    { name = "SMB Team", email = "zach@standardmodel.bio" },
]
dependencies = [
    "torch>=2.8.0",
    "pandas",
    "requests",
    "boto3",
    "packaging",
    "python-dotenv",
]

readme = "README.md"
requires-python = ">= 3.11"
license = {text = "Apache-2.0"}
keywords = [
    'biomedicine',
    'large foundational model',
    'vision language model',
    'pytorch',
]
classifiers = [
    'Development Status :: 4 - Beta',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: Apache Software License',
]

[project.optional-dependencies]
imaging = [
    "monai[all]>=1.5.0",
    "nibabel>=5.3.0",
    "pydicom>=2.4.0",
    "transformers>=4.51.0",
]

[project.urls]
Homepage = "https://github.com/standardmodelbio/smb-utils/tree/main"
Repository = "https://github.com/standardmodelbio/smb-utils.git"
Issues = "https://github.com/standardmodelbio/smb-utils/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "torch",
    "torchvision",
    "torchaudio",
    "tqdm",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/smb_utils"]

[tool.ruff]
target-version = "py312"
line-length = 79
indent-width = 4

[tool.ruff.lint]
ignore = ["C408", "C901", "E501", "E731", "E741", "W605"]
select = ["C", "E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403", "F811"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["smb_utils"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"